made home page moble/tablet friendly

--- a/src/components/ContactUs/ContactUs.css
+++ b/src/components/ContactUs/ContactUs.css
@@ -53,3 +53,39 @@
 .contact_form {
   grid-column: 3;
 }
+
+/* iphone 5-6 and pluses */
+@media only screen and (max-width: 414px) { 
+  .contact_us_container {
+    display: flex;
+    flex-direction: column;
+    padding-left: 2rem;
+  }
+
+  .state {
+    font-size: 25px;
+  }
+
+  .contact_us_line {
+    width: 63%;
+  }
+
+  .address {
+    font-size: 20px;
+  }
+
+  .street {
+    font-size: 20px;
+  }
+
+  .email_phone_fax {
+    font-size: 20px;
+  }
+}
+
+/* ipad */
+@media only screen and (max-width: 1024px) { 
+  .contact_us_line {
+    width: 80%;
+  }
+}
