nav bar is now mobile friendly

--- a/src/components/Navigation/Navbar.css
+++ b/src/components/Navigation/Navbar.css
@@ -54,3 +54,14 @@
   }
 }
 
+@media only screen and (max-width: 1024px) { 
+  .toolbar {
+    font-size: 20px;
+    height: 8%;
+  }
+
+  .toolbar_logo img {
+    width: 60%;
+    padding: 0;
+  }
+}
