--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -174,8 +174,8 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='152' height='152' viewBox='0 0 152 152'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='temple' fill='%23f1f1f1' fill-opacity='0.1'%3E%3Cpath d='M152 150v2H0v-2h28v-8H8v-20H0v-2h8V80h42v20h20v42H30v8h90v-8H80v-42h20V80h42v40h8V30h-8v40h-42V50H80V8h40V0h2v8h20v20h8V0h2v150zm-2 0v-28h-8v20h-20v8h28zM82 30v18h18V30H82zm20 18h20v20h18V30h-20V10H82v18h20v20zm0 2v18h18V50h-18zm20-22h18V10h-18v18zm-54 92v-18H50v18h18zm-20-18H28V82H10v38h20v20h38v-18H48v-20zm0-2V82H30v18h18zm-20 22H10v18h18v-18zm54 0v18h38v-20h20V82h-18v20h-20v20H82zm18-20H82v18h18v-18zm2-2h18V82h-18v18zm20 40v-18h18v18h-18zM30 0h-2v8H8v20H0v2h8v40h42V50h20V8H30V0zm20 48h18V30H50v18zm18-20H48v20H28v20H10V30h20V10h38v18zM30 50h18v18H30V50zm-2-40H10v18h18V10z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
-/* iphone 5-6 and pluses */
-@media only screen and (max-width: 414px) {
+/* iphone x */
+@media only screen and (min-width: 375px) {
   .icon_container {
     display: none;
   }
@@ -220,24 +220,87 @@
   }
 
   .testimonial_title {
-    font-size: 30px;
+    font-size: 20px;
+  } 
+}
+
+/* iphone 5-6 and pluses */
+@media only screen and (min-width: 414px) { 
+  .icon_container {
+    display: none;
+  }
+
+  .services_container {
+    display: flex;
+    flex-direction: column;
+    margin: 0 1rem;
+  }
+
+  .services_title {
+    font-size: 20px;
+  }
+
+  .services_description {
+    font-size: 15px;
+  }
+
+  .services_description21 {
+    font-size: 15px;
+  }
+
+  .services_sub_container1 {
+    margin-bottom: 2rem;
+  }
+
+  .services_sub_container2 {
+    margin-bottom: 2rem;
+  }
+
+  .home_about_us {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .description_pic {
+    width: 100%;
+  }
+
+  .home_about_description {
+    font-size: 20px;
+  }
+
+  .testimonial_title {
+    font-size: 25px;
     margin-top: 2rem;
   }
 
   .testimonial_actual {
     font-size: 20px;
   }
-}
+} 
 
-/* iphone x */
-@media only screen and (max-width: 375px) {
-  .testimonial_title {
-    font-size: 25px;
-  } 
-}
+/* ipad */ 
+@media only screen and (min-width: 768px) { 
+  .services_title {
+    font-size: 40px;
+  }
 
-/* ipad */
-@media only screen and (max-width: 1024px) {
+  .services_description {
+    font-size: 14px;
+  }
+
+  .services_description21 {
+    font-size: 14px;
+  }
+
+  .home_about_description {
+    font-size: 18px;
+  }
+}
+   
+
+/* ipad pro */
+@media only screen and (min-width: 1024px) {
   .testimonial_title {
     font-size: 50px;
   }
@@ -275,4 +338,5 @@
   .home_about_description {
     font-size: 20px;
   }
-}
+} 
+
