changed contact us page

--- a/src/components/NavbarDropDown/NavbarDropDown.css
+++ b/src/components/NavbarDropDown/NavbarDropDown.css
@@ -16,12 +16,12 @@ button:focus {
 }
 
 .dropdown_container {
-  width: 45rem;
+  width: 40rem;
   display: flex;
   align-items: flex-start;
   justify-content: flex-start;
   font-weight: 200;
-  background-color :#472a8e;
+  background-color :#625a8f;
   position: absolute;
   z-index: 999;
   color: white; 
@@ -52,7 +52,7 @@ button:focus {
   padding: 15px !important;
   transition: background-color ease-in-out 300ms, color ease-in-out 300ms !important;
   width: 20rem;
-  background-color: #472a8e;
+  background-color: #625a8f;
   color: white;
   border: transparent;
   text-align: left;
