--- a/src/components/Testimonial/Testimonial.css
+++ b/src/components/Testimonial/Testimonial.css
@@ -24,7 +24,7 @@
 }
 
 /* iphone x */
-@media only screen and (min-width: 375px) {
+/* @media only screen and (min-width: 375px) {
   .testimonial_description {
     font-size: 18px;
     padding: 1rem;
@@ -37,10 +37,10 @@
   .testimonial_location {
     font-size: 15px;
   }
-}
+} */
 
 /* iphone 5-6 and pluses */
-@media only screen and (min-width: 414px) {
+/* @media only screen and (min-width: 414px) {
   .testimonial_description {
     font-size: 18px;
     padding: 1rem;
@@ -53,10 +53,10 @@
   .testimonial_location {
     font-size: 15px;
   }
-}
+} */
 
 /* ipad  */
-@media only screen and (min-width: 1024px) {
+/* @media only screen and (min-width: 1024px) {
   .testimonial_description {
     font-size: 25px;
   }
@@ -68,4 +68,4 @@
   .testimonial_location {
     font-size: 18px;
   }
-}
+} */
