--- a/src/components/ContactUs/ContactUs.css
+++ b/src/components/ContactUs/ContactUs.css
@@ -55,7 +55,7 @@
 }
 
 /* iphone 5-6 and pluses */
-@media only screen and (max-width: 414px) { 
+/* @media only screen and (max-width: 414px) { 
   .contact_us_container {
     display: flex;
     flex-direction: column;
@@ -81,11 +81,11 @@
   .email_phone_fax {
     font-size: 20px;
   }
-}
+} */
 
 /* ipad */
-@media only screen and (max-width: 1024px) { 
+/* @media only screen and (max-width: 1024px) { 
   .contact_us_line {
     width: 80%;
   }
-}
+} */
