--- a/src/pages/EasyTrack/EasyTrack.css
+++ b/src/pages/EasyTrack/EasyTrack.css
@@ -19,18 +19,24 @@
   text-align: center;
   font-size: 45px;
   font-weight: bold;
-  color: #8974b6
+  color: #8974b6;
+  margin-bottom: 2rem;
 }
 
 .easy_middle_container {
   display: grid;
   grid-template-columns: 10% 1fr 1fr 10%;
   grid-template-rows: 40% 40%;
+  gap: 2rem;
   font-size: 35px;
+  font-weight: bold;
 }
 
 .easy_middle {
-  padding: 3rem;
+  padding: 5rem 3rem;
+  background-color: darkgray;
+  box-shadow: 0 0 7px -1px;
+  border-radius: 3px;
 }
 
 .track_icon {
