--- a/src/pages/Contact/Contact.css
+++ b/src/pages/Contact/Contact.css
@@ -1,6 +1,7 @@
 .contact_us_top_container {
-  padding-top: 13%;
-  padding-bottom: 9%;
+  background: linear-gradient(0deg, #8974b6,rgb(2, 28, 51));
+  padding-top: 12%;
+  padding-bottom: 5%;
   text-align: center;
   color: white;
 }
