--- a/src/patientEquipment/InfusionPumps/InfusionPumps.css
+++ b/src/patientEquipment/InfusionPumps/InfusionPumps.css
@@ -1,20 +1,21 @@
 .pumps_container {
   display: grid;
-  grid-template-columns: 10% 1fr 1fr 1fr 10%;
-  grid-template-rows: 60% 50%;
+  grid-template-columns: 10% 1fr 1fr 10%;
+  grid-template-rows: 1fr 1fr;
   justify-items: center;
+  margin-bottom: 2rem;
 }
 
 .pumps_description1 {
-  grid-area: 1 / 2 / 2 / 3;
-}
-
-.pumps_img_container1 {
   grid-area: 1 / 3 / 2 / 4;
 }
 
+.pumps_img_container1 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+
 .pumps_description2  {
-  grid-area: 1 / 4 / 2 / 5;
+  grid-area: 2 / 2 / 3 / 3; 
 }
 
 .pumps_img_container2 {
