--- a/src/patientEquipment/PatientMonitoring/PatientMonitoring.css
+++ b/src/patientEquipment/PatientMonitoring/PatientMonitoring.css
@@ -1,8 +1,7 @@
 .patient_container {
   display: grid;
-  grid-template-columns: 10% 1fr 5% 1fr 10%;
-  grid-template-rows: repeat(3, 30%);
-  gap: 3%;
+  grid-template-columns: 10% 1fr 1fr 1fr 10%;
+  grid-template-rows: 1fr 1fr;
   margin-bottom: 3rem;
 }
 
@@ -12,24 +11,24 @@
 }
 
 .patient_description1 {
-  grid-area: 1 / 4 / 2 / 5; 
+  grid-area: 2 / 2 / 3 / 3; 
 }
 
 .patient_img2 {
-  grid-area: 2 / 2 / 3 / 3;
+  grid-area: 1 / 3 / 2 / 4;
   justify-self: center;
 }
 
 .patient_description2 {
-  grid-area: 2 / 4 / 3 / 5;
+  grid-area: 2 / 3 / 3 / 4;
 }
 
 .patient_img3 {
-  grid-area: 3 / 2 / 4 / 3; 
+  grid-area: 1 / 4 / 2 / 5;  
 }
 
 .patient_description3 {
-  grid-area: 3 / 4 / 4 / 5;
+  grid-area: 2 / 4 / 3 / 5; 
 }
 
 .patient_img {
