--- a/client/src/patientEquipment/PatientMonitoring/PatientMonitoring.css
+++ b/client/src/patientEquipment/PatientMonitoring/PatientMonitoring.css
@@ -32,8 +32,10 @@
 }
 
 .patient_img {
-  width: 40%;
+  width: 80%;
   justify-self: center;
+  box-shadow: 0 0 7px -1px;
+  border-radius: 3px;
 }
 
 .patient_title {
