--- a/client/src/pages/EasyTrack/EasyTrack.css
+++ b/client/src/pages/EasyTrack/EasyTrack.css
@@ -28,19 +28,19 @@
   grid-template-columns: 10% 1fr 1fr 10%;
   grid-template-rows: 40% 40%;
   gap: 2rem;
-  font-size: 35px;
+  font-size: 26px;
   font-weight: bold;
 }
 
 .easy_middle {
-  padding: 5rem 3rem;
-  background-color: darkgray;
-  box-shadow: 0 0 7px -1px;
-  border-radius: 3px;
+  padding: 3rem;
+  /* background-color: #a4b6fa; */
+  /* box-shadow: 0 0 7px -1px;
+  border-radius: 3px; */
 }
 
 .track_icon {
-  width: 9%;
+  width: 16%;
 }
 
 .easy_middle.first {
