--- a/client/src/components/Testimonial/Testimonial.css
+++ b/client/src/components/Testimonial/Testimonial.css
@@ -23,40 +23,9 @@
   font-weight: bold;
 }
 
-/* iphone x */
-/* @media only screen and (min-width: 375px) {
-  .testimonial_description {
-    font-size: 18px;
-    padding: 1rem;
-  }
-
-  .testimonial_name {
-    font-size: 18px;
-  }
-
-  .testimonial_location {
-    font-size: 15px;
-  }
-} */
-
-/* iphone 5-6 and pluses */
-/* @media only screen and (min-width: 414px) {
-  .testimonial_description {
-    font-size: 18px;
-    padding: 1rem;
-  }
-
-  .testimonial_name {
-    font-size: 18px;
-  }
-
-  .testimonial_location {
-    font-size: 15px;
-  }
-} */
 
 /* ipad  */
-/* @media only screen and (min-width: 1024px) {
+@media only screen and (min-width: 1024px) {
   .testimonial_description {
     font-size: 25px;
   }
@@ -68,4 +37,54 @@
   .testimonial_location {
     font-size: 18px;
   }
-} */
+}
+
+
+/* pixel 2xl */
+@media only screen and (min-width: 411px) {
+  .testimonial_description {
+    font-size: 15px;
+    padding: 1rem;
+  }
+
+  .testimonial_name {
+    font-size: 18px;
+  }
+
+  .testimonial_location {
+    font-size: 15px;
+  }
+
+}
+
+/* iphone 5-6 and pluses */
+@media only screen and (min-width: 414px) {
+  .testimonial_description {
+    font-size: 18px;
+    padding: 1rem;
+  }
+
+  .testimonial_name {
+    font-size: 18px;
+  }
+
+  .testimonial_location {
+    font-size: 15px;
+  }
+} 
+
+/* iphone x */
+@media only screen and (max-width: 375px) {
+  .testimonial_description {
+    font-size: 18px;
+    padding: 1rem;
+  }
+
+  .testimonial_name {
+    font-size: 18px;
+  }
+
+  .testimonial_location {
+    font-size: 15px;
+  }
+}
