--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -78,7 +78,7 @@
 /* about us section */
 .home_about_us {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 40% 1fr;
 }
 
 .home_about_pic {
@@ -91,7 +91,7 @@
 }
 
 .description_pic {
-  width: 50rem;
+  width: 40rem;
 }
 
 .home_about_description {
@@ -99,7 +99,7 @@
 }
 
 .signature_title {
-  margin: 3rem 0;
+  margin: 1rem 0;
   font-size: 35px;
   font-weight: bold;
 }
@@ -110,7 +110,7 @@
 }
 
 .signature_list ul li{
-  margin: 2rem 0;
+  margin: 1rem 0;
 }
 
 /* testimonital section */
@@ -140,12 +140,89 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='152' height='152' viewBox='0 0 152 152'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='temple' fill='%23f1f1f1' fill-opacity='0.1'%3E%3Cpath d='M152 150v2H0v-2h28v-8H8v-20H0v-2h8V80h42v20h20v42H30v8h90v-8H80v-42h20V80h42v40h8V30h-8v40h-42V50H80V8h40V0h2v8h20v20h8V0h2v150zm-2 0v-28h-8v20h-20v8h28zM82 30v18h18V30H82zm20 18h20v20h18V30h-20V10H82v18h20v20zm0 2v18h18V50h-18zm20-22h18V10h-18v18zm-54 92v-18H50v18h18zm-20-18H28V82H10v38h20v20h38v-18H48v-20zm0-2V82H30v18h18zm-20 22H10v18h18v-18zm54 0v18h38v-20h20V82h-18v20h-20v20H82zm18-20H82v18h18v-18zm2-2h18V82h-18v18zm20 40v-18h18v18h-18zM30 0h-2v8H8v20H0v2h8v40h42V50h20V8H30V0zm20 48h18V30H50v18zm18-20H48v20H28v20H10V30h20V10h38v18zM30 50h18v18H30V50zm-2-40H10v18h18V10z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
+
+
+/* ipad pro */
+ @media only screen and (max-width: 1024px) {
+  .testimonial_title {
+    font-size: 50px;
+  }
+
+  .services_title {
+    font-size: 25px;
+  }
+
+  .services_description {
+    font-size: 20px;
+  }
+
+  .services_description21 {
+    font-size: 20px;
+  }
+
+  .services_icon {
+    width: 5rem;
+    height: 5rem;
+  }
+
+  .services_description ul {
+    margin-right: 2rem;
+  }
+
+  .home_about_container {
+    margin-left: 2rem;
+  }
+
+  .description_pic {
+    width: 100%;
+  }
+
+  .home_about_description {
+    font-size: 18px;
+  }
+
+  .signature_title {
+    font-size: 20px;
+  }
+
+  .signature_list ul li {
+    font-size: 18px;
+  }
+} 
+
+/* ipad */ 
+@media only screen and (max-device-width: 768px) { 
+  .services_title {
+    font-size: 25px;
+  }
+
+  .services_container {
+    margin: 0;
+  }
+
+  .services_description {
+    font-size: 15px;
+  }
+
+  .services_description21 {
+    font-size: 15px;
+  }
+
+  .home_about_description {
+    font-size: 15px;
+  }
+
+}
+
 /* iphone x */
-/* @media only screen and (min-width: 375px) {
+@media only screen and (max-width: 450px) {
   .icon_container {
     display: none;
   }
 
+  .services_sub_container1 {
+    padding-bottom: 15%;
+  }
   .services_container {
     display: flex;
     flex-direction: column;
@@ -181,17 +258,34 @@
     width: 100%;
   }
 
+  .home_about_container {
+    margin-left: 2rem;
+  }
+
   .home_about_description {
+    font-size: 16px;
+  }
+
+  .signature_title {
     font-size: 20px;
+  }
+
+  .signature_list ul li {
+    font-size: 18px;
   }
 
   .testimonial_title {
     font-size: 20px;
   } 
-} */
+}
 
 /* iphone 5-6 and pluses */
-/* @media only screen and (min-width: 414px) { 
+@media only screen and (max-width: 375px) { 
+  .testimonial_title {
+    font-size: 20px;
+  } 
+}
+/* @media only screen and (max-width: 414px) { 
   .icon_container {
     display: none;
   }
@@ -245,64 +339,4 @@
   }
 }  */
 
-/* ipad */ 
-/* @media only screen and (min-width: 768px) { 
-  .services_title {
-    font-size: 40px;
-  }
-
-  .services_description {
-    font-size: 14px;
-  }
-
-  .services_description21 {
-    font-size: 14px;
-  }
-
-  .home_about_description {
-    font-size: 18px;
-  }
-} */
-   
-
-/* ipad pro */
-/* @media only screen and (min-width: 1024px) {
-  .testimonial_title {
-    font-size: 50px;
-  }
-
-  .services_title {
-    font-size: 25px;
-  }
-
-  .services_description {
-    font-size: 20px;
-  }
-
-  .services_description21 {
-    font-size: 20px;
-  }
-
-  .services_icon {
-    width: 5rem;
-    height: 5rem;
-  }
-
-  .services_description ul {
-    margin-right: 2rem;
-  }
-
-  .home_about_us {
-    display: flex;
-    padding: 2rem;
-  }
-
-  .description_pic {
-    width: 100%;
-  }
-
-  .home_about_description {
-    font-size: 20px;
-  }
-}  */
-
+  
