--- a/client/src/components/Testimonial/Testimonial.css
+++ b/client/src/components/Testimonial/Testimonial.css
@@ -1,4 +1,3 @@
-
 .testimonal_container {
   padding: 2%;
   font-size: 30px;
@@ -25,7 +24,7 @@
 
 
 /* ipad  */
-@media only screen and (min-width: 1024px) {
+@media only screen and (max-width: 1024px) {
   .testimonial_description {
     font-size: 25px;
   }
@@ -41,7 +40,7 @@
 
 
 /* pixel 2xl */
-@media only screen and (min-width: 411px) {
+@media only screen and (max-width: 411px) {
   .testimonial_description {
     font-size: 15px;
     padding: 1rem;
@@ -58,7 +57,7 @@
 }
 
 /* iphone 5-6 and pluses */
-@media only screen and (min-width: 414px) {
+@media only screen and (max-width: 414px) {
   .testimonial_description {
     font-size: 18px;
     padding: 1rem;
