--- a/client/src/surgicalEquipment/RigidEndoscope/RigidEndoscope.css
+++ b/client/src/surgicalEquipment/RigidEndoscope/RigidEndoscope.css
@@ -158,7 +158,76 @@
 }
 
 /* pixel */ 
-@media only screen and (max-device-width: 411px) {
+@media only screen and (max-width: 411px) {
+  .rigid_title {
+    margin-top: 3rem;
+    font-size: 30px;
+  }
+
+  .rigid_repair_description {
+    font-size: 25px;
+    padding: 0;
+  }
+
+  .rigid_repair_services_title {
+    font-size: 25px;
+  }
+
+  .rigid_repair_services_description {
+    font-size: 20px;
+  }
+
+  .rigid_center_container {
+    display: flex;
+    flex-direction: column;
+    padding-left: 0;
+  }
+
+  .rigid_image {
+    margin-left: 1.5rem;
+  }
+
+  .rigid_center_middle {
+    margin-top: 2rem;
+  }
+
+  .rigid_center_title {
+    font-size: 20px;
+  }
+
+  .rigid_center_list ul {
+    font-size: 15px;
+  }
+
+  .rigid_middle_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .rigid_perform_title {
+    font-size: 20px;
+  }
+
+  .rigid_perform_list ul {
+    font-size: 15px;
+  }
+
+  .rigid_center_list ul {
+    font-size: 15px;
+  }
+
+  .rigid_services_title {
+    font-size: 20px;
+  }
+
+  .rigid_services_list ul {
+    font-size: 15px;
+  }
+}
+
+/* iphone 6/7/8 plus */ 
+@media only screen and (max-width: 414px) {
   .rigid_title {
     margin-top: 3rem;
     font-size: 30px;
