--- a/client/src/surgicalEquipment/VideoEquipment/VideoEquipment.css
+++ b/client/src/surgicalEquipment/VideoEquipment/VideoEquipment.css
@@ -51,3 +51,154 @@
   padding-left: 0;
   font-size: 30px;
 }
+
+/* ipad pro */
+@media only screen and (max-width: 1024px) {
+  .video_img_container {
+    margin: 2rem 0;
+  }
+  
+  .video_img {
+    width: 70%;
+  }
+
+  .video_middle_container {
+    margin: 4rem 0;
+  }
+}
+
+/* ipad */ 
+@media only screen and (max-device-width: 768px) {
+  .video_img_container {
+    margin: 2rem 0;
+  }
+  
+  .video_img {
+    width: 70%;
+  }
+
+  .video_middle_container {
+    margin: 3rem 0;
+  }
+
+  .advan_list.video ul {
+    font-size: 25px;
+  }
+
+  .advan_title.video {
+    font-size: 30px;
+  }
+
+  .video_title {
+    font-size: 30px;
+  }
+
+  .video_list ul {
+    font-size: 25px;
+  }
+}
+
+/* iphone 6/7/8 plus */
+@media only screen and (max-width: 414px) {
+  .video_img_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .video_img {
+    width: 70%;
+  }
+
+  .video_middle_container {
+    display: flex;
+    flex-direction: column;
+    margin: 3rem 0;
+  }
+
+  .advan_list.video ul {
+    font-size: 20px;
+  }
+
+  .advan_title.video {
+    font-size: 30px;
+  }
+
+  .video_title {
+    font-size: 30px;
+  }
+
+  .video_list ul {
+    font-size: 20px;
+  }
+}
+
+/* pixel */
+@media only screen and (max-width: 411px) {
+  .video_img_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .video_img {
+    width: 70%;
+  }
+
+  .video_middle_container {
+    display: flex;
+    flex-direction: column;
+    margin: 3rem 0;
+  }
+
+  .advan_list.video ul {
+    font-size: 25px;
+  }
+
+  .advan_title.video {
+    font-size: 30px;
+  }
+
+  .video_title {
+    font-size: 30px;
+  }
+
+  .video_list ul {
+    font-size: 25px;
+  }
+}
+
+/* iphone x */
+@media only screen and (max-width: 375px) {
+  .video_img_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .video_img {
+    width: 70%;
+  }
+
+  .video_middle_container {
+    display: flex;
+    flex-direction: column;
+    margin: 3rem 0;
+  }
+
+  .advan_list.video ul {
+    font-size: 20px;
+  }
+
+  .advan_title.video {
+    font-size: 30px;
+  }
+
+  .video_title {
+    font-size: 30px;
+  }
+
+  .video_list ul {
+    font-size: 20px;
+  }
+}
