--- a/client/src/surgicalEquipment/UltrasoundProbe/UltrasoundProbe.css
+++ b/client/src/surgicalEquipment/UltrasoundProbe/UltrasoundProbe.css
@@ -57,3 +57,89 @@
 .advan_container.ultra {
   grid-area: 1 / 3 / 2 / 4;
 }
+
+/* ipad pro */
+@media only screen and (max-width: 1024px) {
+  .ultra_middle_container.bottom {
+    margin: 0;
+  }
+
+  .ultra_title {
+    font-size: 32px;
+  }
+
+  .ultra_list ul {
+    font-size: 25px;
+  }
+
+  .advan_title.ultra {
+    font-size: 32px;
+  }
+
+  .advan_list.ultra ul {
+    font-size: 25px;
+  }
+
+  .ultra_middle_container.bottom {
+    margin: 3rem 0;
+  }
+}
+
+/* ipad */ 
+@media only screen and (max-device-width: 768px) {
+  .ultra_middle_container.bottom {
+    margin: 0;
+  }
+
+  .ultra_title {
+    font-size: 30px;
+  }
+
+  .ultra_list ul {
+    font-size: 20px;
+  }
+
+  .advan_title.ultra {
+    font-size: 30px;
+  }
+
+  .advan_list.ultra ul {
+    font-size: 20px;
+  }
+}
+
+/* iphone x */
+@media only screen and (max-width: 450px) {
+  .ultra_middle_container {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2rem;
+  }
+
+  .ultra_brands_container {
+    margin-top: 2rem;
+  }
+
+  .ultra_title {
+    font-size: 30px;
+  }
+
+  .ultra_list ul {
+    font-size: 20px;
+  }
+
+  .ultra_middle_container.bottom {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .advan_title.ultra {
+    font-size: 30px;
+  }
+
+  .advan_list.ultra ul {
+    font-size: 20px;
+  }
+
+}
