--- a/client/src/surgicalEquipment/FlexibleEndoscope/FlexibleEndoscope.css
+++ b/client/src/surgicalEquipment/FlexibleEndoscope/FlexibleEndoscope.css
@@ -169,7 +169,7 @@
 }
 
 /* ipad */ 
-@media only screen and (max-device-width: 768px) {
+@media only screen and (max-width: 768px) {
   .flex_title {
     margin-top: 3rem;
     font-size: 40px;
