--- a/client/src/patientEquipment/PatientMonitoring/PatientMonitoring.css
+++ b/client/src/patientEquipment/PatientMonitoring/PatientMonitoring.css
@@ -51,3 +51,105 @@
   padding-left: 0;
   text-align: center;
 }
+
+/* ipad pro */
+@media only screen and (max-width: 1024px) {
+  .patient_container {
+    display: grid;
+    grid-template-columns: 10% 1fr 1fr 1fr 10%;
+    grid-template-rows: .5fr 1fr 1fr;
+    gap: 1px 1px;
+  }
+
+  .patient_img1 {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+
+  .patient_img2 {
+    grid-area: 1 / 3 / 2 / 4;
+  }
+
+  .patient_img3 {
+    grid-area: 1 / 4 / 2 / 5;
+  }
+
+  .patient_description1 {
+    grid-area: 3 / 2 / 4 / 3;
+  }
+
+  .patient_description2 {
+    grid-area: 3 / 3 / 4 / 5;
+  }
+
+  .patient_description3 {
+    grid-area: 2 / 2 / 3 / 5; 
+    margin-top: 2rem;
+  }
+
+  .patient_title {
+    font-size: 32px;
+  }
+
+  .patient_list ul {
+    font-size: 25px;
+  }
+}
+
+/* ipad */ 
+@media only screen and (max-width: 768px) {
+  .patient_container {
+    display: grid;
+    grid-template-columns: 10% 1fr 1fr 1fr 10%;
+    grid-template-rows: .5fr 1fr 1fr;
+    gap: 1px 1px;
+  }
+
+  .patient_img1 {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+
+  .patient_img2 {
+    grid-area: 1 / 3 / 2 / 4;
+  }
+
+  .patient_img3 {
+    grid-area: 1 / 4 / 2 / 5;
+  }
+
+  .patient_description1 {
+    grid-area: 3 / 2 / 4 / 3;
+  }
+
+  .patient_description2 {
+    grid-area: 3 / 3 / 4 / 5;
+  }
+
+  .patient_description3 {
+    grid-area: 2 / 2 / 3 / 5; 
+    margin-top: 2rem;
+  }
+
+  .patient_title {
+    font-size: 32px;
+  }
+
+  .patient_list ul {
+    font-size: 25px;
+  }
+} 
+
+/* iphone x */
+@media only screen and (max-width: 450px) {
+  .patient_container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .patient_title {
+    font-size: 30px;
+  }
+
+  .patient_list ul {
+    font-size: 20px;
+  }
+}
