--- a/client/src/surgicalEquipment/DentalHand/DentalHand.css
+++ b/client/src/surgicalEquipment/DentalHand/DentalHand.css
@@ -50,3 +50,92 @@
   padding-left: 0;
   font-size: 30px;
 }
+
+/* ipad pro */
+@media only screen and (max-width: 1024px) {
+  .dental_middle_container {
+    display: grid;
+    grid-template-columns: 5% 1fr 1fr 5%;
+    grid-template-rows: 1fr 1fr;
+    margin: 4rem 1rem 4rem 1rem;
+  }
+
+  .dental1_container {
+    grid-area: 2 / 2 / 3 / 4;
+    margin-top: 2rem;
+  }  
+
+  .dental2_container {
+    grid-area: 1 / 3 / 2 / 4; 
+  }
+
+  .dental3_container {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+
+  .dental_title {
+    font-size: 30px;
+  }
+
+  .dental_list ul {
+    font-size: 20px;
+  }
+}
+
+/* ipad */ 
+@media only screen and (max-width: 768px) {
+  .dental_middle_container {
+    display: grid;
+    grid-template-columns: 5% 1fr 1fr 5%;
+    grid-template-rows: 1fr 1fr;
+    margin: 2rem 1rem 0 1rem;
+  }
+
+  .dental1_container {
+    grid-area: 2 / 2 / 3 / 4;
+  }  
+
+  .dental2_container {
+    grid-area: 1 / 3 / 2 / 4; 
+  }
+
+  .dental3_container {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+
+  .dental_title {
+    font-size: 30px;
+  }
+
+  .dental_list ul {
+    font-size: 20px;
+  }
+} 
+
+/* iphone x */
+@media only screen and (max-width: 450px) {
+  .dental_middle_container {
+    display: flex;
+    flex-direction: column;
+    margin: 2rem 1rem;
+  }
+
+  .dental_title {
+    font-size: 30px;
+  }
+
+  .dental_list ul {
+    font-size: 20px;
+  }
+}
+
+/* iphone 5 */
+@media only screen and (max-width: 320px) {
+  .dental_title {
+    font-size: 25px;
+  }
+
+  .dental_list ul {
+    font-size: 18px;
+  }
+} 
