--- a/client/src/patientEquipment/FiberOptic/FiberOptic.css
+++ b/client/src/patientEquipment/FiberOptic/FiberOptic.css
@@ -34,3 +34,57 @@
   padding-left: 0;
   text-align: center;
 }
+
+
+/* ipad pro */
+@media only screen and (max-width: 1024px) {
+  .fiber_midde_container {
+    margin-bottom: 7rem;
+  }
+  .fiber_title {
+    font-size: 34px;
+  }
+
+  .fiber_list ul {
+    font-size: 25px;
+  }
+}
+
+/* ipad */ 
+@media only screen and (max-width: 768px) {
+  .fiber_title {
+    font-size: 32px;
+  }
+
+  .fiber_list ul {
+    font-size: 25px;
+  }
+} 
+
+/* iphone x */
+@media only screen and (max-width: 450px) {
+  .fiber_midde_container {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .fiber_title {
+    font-size: 30px;
+  }
+
+  .fiber_list ul {
+    font-size: 20px;
+  }
+}
+
+/* iphone 5 */
+@media only screen and (max-width: 320px) {
+
+  .fiber_title {
+    font-size: 25px;
+  }
+
+  .fiber_list ul {
+    font-size: 18px;
+  }
+}
