--- a/client/src/patientEquipment/InfusionPumps/InfusionPumps.css
+++ b/client/src/patientEquipment/InfusionPumps/InfusionPumps.css
@@ -39,3 +39,45 @@
   padding-left: 0;
   text-align: center;
 }
+
+/* ipad pro */
+@media only screen and (max-width: 1024px) {
+  .pumps_container {
+    margin: 2rem 0 5rem 0;
+  }
+  .pumps_title {
+    font-size: 32px;
+  }
+
+  .pumps_list ul {
+    font-size: 25px;
+  }
+}
+
+/* ipad */ 
+@media only screen and (max-width: 768px) {
+  .pumps_title {
+    font-size: 32px;
+  }
+
+  .pumps_list ul {
+    font-size: 25px;
+  }
+} 
+
+/* iphone x */
+@media only screen and (max-width: 450px) {
+  .pumps_container {
+    margin: 2rem 0;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .pumps_title {
+    font-size: 30px;
+  }
+
+  .pumps_list ul {
+    font-size: 20px;
+  }
+}
