--- a/client/src/patientEquipment/Parts/Parts.css
+++ b/client/src/patientEquipment/Parts/Parts.css
@@ -5,3 +5,27 @@
   text-align: center;
   margin-bottom: 3rem;
 }
+
+/* ipad pro */
+@media only screen and (max-width: 1024px) {
+  .parts_container {
+    margin: 3rem 0 31rem 0;
+  }
+}
+
+/* ipad */ 
+@media only screen and (max-width: 768px) {
+  .parts_container {
+    margin: 3rem 0 13rem 0;
+  }
+} 
+
+/* iphone x */
+@media only screen and (max-width: 450px) {
+  .parts_container {
+    margin: 3rem 0 7rem 0;
+  }
+  .parts_container ul {
+    font-size: 25px;
+  }
+}
